# unicode-title-case

./: .gitignore  Cargo.toml  LICENSE-MIT  LICENSE.txt  README.md  build.rs
resources/: SpecialCasing.txt
src/: lib.rs
