[package]
name = "unicode_titlecase"
version = "1.0.1"
edition = "2021"
authors = ["Carl Raffaele"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Teh-Bobo/unicode-title-case"
description = "A crate to add Unicode titlecase options to chars"

[features]
default = ["std"]
std = []