[package]
name = "unicode_titlecase"
version = "1.1.0"
edition = "2021"
authors = ["Carl Raffaele"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Teh-Bobo/unicode-title-case"
description = "A crate to add Unicode titlecase options to chars and strings"

[features]
default = ["std"]
std = []